fixed overflow bug

--- a/starter-code/index.css
+++ b/starter-code/index.css
@@ -30,7 +30,7 @@ html {
 
 .hero_header {
   position: relative;
-  width: 34.3rem;
+  width: 91.4666%;
   height: 3.4rem;
   top: 3.2rem;
   margin: auto;
@@ -76,7 +76,7 @@ html {
 }
 
 .hero_banner {
-  width: 34.3rem;
+  width: 91.466%;
   height: 19.5rem;
   position: relative;
   top: 9.8rem;
@@ -89,7 +89,7 @@ html {
 .hero_banner-title {
   color: var(--white);
   font-family: var(--fraunces);
-  font-size: 5rem;
+  font-size: 13.333vw;
   font-variation-settings: "opsz" 144, "wght" 600;
   text-align: center;
   line-height: 1.1;
@@ -119,7 +119,7 @@ html {
 }
 
 .hero_img {
-  width: 32rem;
+  width: 85.333%;
   height: 18.4rem;
   position: absolute;
   left: 3.6rem;
@@ -147,6 +147,13 @@ html {
     font-size: 6rem;
   }
 
+  .hero_bg-wrapper {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+
   .hero_bg-img1,
   .hero_bg-img2 {
     display: block;
@@ -162,7 +169,7 @@ html {
   }
 
   .hero_bg-img2 {
-    position: absolute;
+    position: relative;
     width: 14.17rem;
     height: 11.271rem;
     top: 28.39rem;
